chore: update spring-boot and kotlin